# resume_maker

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: login.py  profiles.py  users.py
backend/app/auth/: users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  crud_base.py  crud_profile.py  crud_users.py  users.py
backend/app/database/: database.py  dependencies.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 05e66ebbfc24_user_add_to_profiles_field_lazeload.py  0a4898847f2f_user_profiles_joined.py  13df390e04c1_add_is_superuser_field.py  e711b08042d9_init.py  fe208e15b52f_init.py
backend/app/models/: __init__.py  education.py  experience.py  link.py  profile.py  skill.py  user.py
backend/app/schemas/: __init__.py  base_schemas.py  education.py  experience.py  link.py  profile.py  skill.py  user.py
backend/app/services/: profile_services.py
