[tool.poetry]
name = "resume-maker-backend"
version = "0.1.0"
description = "Backend part of the Resume Maker web application"
authors = ["Artem Jasan <artjasan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "pytest"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
