[tool.poetry]
name = "resume-maker-backend"
version = "0.1.0"
description = "Backend part of the Resume Maker web application"
authors = ["Artem Jasan <artjasan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "pytest"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.37"
passlib = "^1.7.4"
alembic = "^1.8.0"
email-validator = "^1.2.1"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
